@@ -4699,7 +4699,12 @@ bgp_config_write_family_header (struct vty *vty, afi_t afi, safi_t safi,
 	vty_out (vty, "vpnv4 unicast");
     }
   else if (afi == AFI_IP6)
-    vty_out (vty, "ipv6");
+    {
+      vty_out (vty, "ipv6");
+      
+      if (safi == SAFI_MULTICAST)
+        vty_out (vty, " multicast");
+    }
 
   vty_out (vty, "%s", VTY_NEWLINE);
 
@@ -4927,6 +4932,9 @@ bgp_config_write (struct vty *vty)
 
       /* IPv6 unicast configuration.  */
       write += bgp_config_write_family (vty, bgp, AFI_IP6, SAFI_UNICAST);
+
+      /* IPv6 multicast configuration.  */
+      write += bgp_config_write_family (vty, bgp, AFI_IP6, SAFI_MULTICAST);
 
       write++;
     }
