@@ -1,3 +1,10 @@
+2007-04-07 Paul Jakma <paul.jakma@sun.com>
+
+	* bgpd.c: (general) Fix bug #352
+	  (bgp_config_write_family_header) write ipv6/multicast
+	  address family header.
+	  (bgp_config_write) write out ipv6 multicast AF config.
+
 2007-02-22 Paul Jakma <paul.jakma@sun.com>
 
 	* bgp_fsm.c: (bgp_fsm_change_status) Handle state change into
